@@ -1,5 +1,6 @@
 package com.barbershop.controller;
 
+import com.barbershop.dto.TimeSlotDTO;
 import com.barbershop.entity.*;
 import com.barbershop.repository.*;
 
@@ -11,10 +12,9 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.util.*;
+import java.time.*;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/user/lichhen")
@@ -22,214 +22,170 @@ public class LichHenUserController {
 
     @Autowired
     private LichHenRepository lichHenRepo;
+
     @Autowired
     private KhachHangRepository khRepo;
+
     @Autowired
     private NhanVienRepository nvRepo;
+
     @Autowired
     private DichVuRepository dichVuRepo;
+
     @Autowired
     private LichHenDichVuRepository lhDvRepo;
 
-    // ========================= UTIL =========================
 
-    private KhachHang getKhachHang(Account acc) {
+    // ================= LẤY KHÁCH HÀNG =================
+
+    private KhachHang getKhachHang(Account acc){
         return khRepo.findByAccount(acc);
     }
 
-    /** Tạo slot 08:00 → 20:00, mỗi 20 phút */
-    private List<LocalTime> generateTimeSlots() {
-        List<LocalTime> list = new ArrayList<>();
-        LocalTime t = LocalTime.of(8, 0);
-        LocalTime end = LocalTime.of(20, 0);
 
-        while (!t.isAfter(end)) {
-            list.add(t);
-            t = t.plusMinutes(20);
-        }
-        return list;
-    }
+    // ================= DANH SÁCH LỊCH HẸN =================
 
-    /** Tổng thời gian thực hiện của các dịch vụ */
-    private int getTotalDuration(List<Integer> dvIds) {
-        if (dvIds == null || dvIds.isEmpty())
-            return 20;
-
-        return dvIds.stream()
-                .map(id -> dichVuRepo.findById(id).orElse(null))
-                .filter(Objects::nonNull)
-                .mapToInt(DichVu::getThoiGianThucHien)
-                .sum();
-    }
-
-    // ========================= LIST (CHỈ REDIRECT VỀ HOME)
-    // =========================
     @GetMapping
-    public String list(HttpSession session) {
+public String list(Model model, HttpSession session){
 
-        Account acc = (Account) session.getAttribute("user");
-        if (acc == null) {
-            return "redirect:/login";
-        }
+    Account acc = (Account) session.getAttribute("user");
 
-        // Danh sách lịch hẹn đã được hiển thị ở trang user-home,
-        // nên /user/lichhen chỉ dùng để điều hướng về đó
-        return "redirect:/user/home";
+    if(acc == null){
+        return "redirect:/login";
     }
 
-    // ========================= ADD FORM =========================
+    KhachHang kh = getKhachHang(acc);
+
+    List<LichHen> list =
+            lichHenRepo.findByKhachHangOrderByNgayDescGioAsc(kh.getMakh());
+
+    // Map lưu dịch vụ theo lịch hẹn
+    java.util.Map<Integer, List<DichVu>> mapDichVu = new java.util.HashMap<>();
+
+    for(LichHen lh : list){
+
+        List<DichVu> dvList =
+                lhDvRepo.findByLichHen_MaLh(lh.getMaLh())
+                        .stream()
+                        .map(x -> x.getDichVu())
+                        .collect(Collectors.toList());
+
+        mapDichVu.put(lh.getMaLh(), dvList);
+    }
+
+    model.addAttribute("listLichHen", list);
+    model.addAttribute("mapDichVu", mapDichVu);
+    model.addAttribute("activePage","appointments");
+
+    return "user/user-appointments";
+}
+
+
+    // ================= FORM THÊM =================
+
     @GetMapping("/add")
-    public String addForm(Model model, HttpSession session) {
+    public String addForm(Model model, HttpSession session){
 
-        if (session.getAttribute("user") == null)
+        if(session.getAttribute("user") == null){
             return "redirect:/login";
-
-        model.addAttribute("errorMsg", session.getAttribute("errorAddMsg"));
-        session.removeAttribute("errorAddMsg");
+        }
 
         model.addAttribute("listNhanVien", nvRepo.findAll());
         model.addAttribute("listDichVu", dichVuRepo.findAll());
+        model.addAttribute("activePage","appointments");
 
-        return "lichhen-add";
+        return "user/lichhen-add";
     }
 
-    // ========================= API LẤY GIỜ RẢNH/BẬN =========================
-    @GetMapping("/api/timeslots")
-    @ResponseBody
-    public List<Map<String, Object>> apiTimeSlots(
-            @RequestParam("manv") int manv,
-            @RequestParam("ngay") String ngay,
-            @RequestParam(name = "dvIds", required = false) List<Integer> dvIds,
-            @RequestParam(name = "excludeId", required = false) Integer excludeId) {
 
-        LocalDate d = LocalDate.parse(ngay); // 2025-11-25
+    // ================= LƯU LỊCH =================
 
-        // Nếu đang sửa lịch hẹn mà không gửi dvIds lên thì lấy lại từ DB
-        if ((dvIds == null || dvIds.isEmpty()) && excludeId != null) {
-            dvIds = lhDvRepo.findByLichHen_MaLh(excludeId)
-                    .stream()
-                    .map(x -> x.getDichVu().getMaDv())
-                    .toList();
-        }
-
-        if (dvIds == null)
-            dvIds = new ArrayList<>();
-
-        int duration = getTotalDuration(dvIds);
-        if (duration == 0)
-            duration = 20; // tối thiểu 20 phút
-
-        List<LocalTime> slots = generateTimeSlots();
-
-        List<LichHen> booked = lichHenRepo.findByNhanVien_Manv(manv).stream()
-                .filter(lh -> lh.getNgayHen().equals(d))
-                .toList();
-
-        List<Map<String, Object>> result = new ArrayList<>();
-
-        for (LocalTime slot : slots) {
-
-            LocalTime slotEnd = slot.plusMinutes(duration);
-            boolean busy = false;
-
-            for (LichHen lh : booked) {
-
-                // bỏ qua lịch đang sửa
-                if (excludeId != null && lh.getMaLh() == excludeId)
-                    continue;
-
-                int usedMinutes = lhDvRepo.findByLichHen_MaLh(lh.getMaLh())
-                        .stream()
-                        .mapToInt(x -> x.getDichVu().getThoiGianThucHien())
-                        .sum();
-
-                if (usedMinutes == 0)
-                    usedMinutes = 20;
-
-                LocalTime s = lh.getGioHen();
-                LocalTime e = s.plusMinutes(usedMinutes);
-
-                boolean overlap = !(slotEnd.isBefore(s) || slot.isAfter(e));
-                if (overlap) {
-                    busy = true;
-                    break;
-                }
-            }
-
-            Map<String, Object> row = new HashMap<>();
-            row.put("time", slot.toString());
-            row.put("busy", busy);
-            result.add(row);
-        }
-
-        return result;
-    }
-
-    // ========================= SAVE =========================
     @PostMapping("/save")
     public String save(
             @RequestParam LocalDate ngayHen,
             @RequestParam LocalTime gioHen,
             @RequestParam int manv,
-            @RequestParam(name = "dichVuChon", required = false) List<Integer> dvIds,
-            HttpSession session) {
+            @RequestParam(name="dichVuChon",required=false) List<Integer> dvIds,
+            HttpSession session){
 
         Account acc = (Account) session.getAttribute("user");
-        if (acc == null)
+
+        if(acc == null){
             return "redirect:/login";
+        }
+
         KhachHang kh = getKhachHang(acc);
 
-        if (LocalDateTime.of(ngayHen, gioHen).isBefore(LocalDateTime.now())) {
-            session.setAttribute("errorAddMsg", "❌ Không thể đặt lịch trong quá khứ!");
+        if(LocalDateTime.of(ngayHen,gioHen).isBefore(LocalDateTime.now())){
+
+            session.setAttribute("errorMsg","Không thể đặt lịch trong quá khứ!");
             return "redirect:/user/lichhen/add";
         }
 
         LichHen lh = new LichHen();
+
         lh.setNgayHen(ngayHen);
         lh.setGioHen(gioHen);
+        lh.setTrangThai("Chờ");
         lh.setKhachHang(kh);
         lh.setNhanVien(nvRepo.findById(manv).orElse(null));
+
         lichHenRepo.save(lh);
 
-        if (dvIds != null) {
-            for (Integer dv : dvIds) {
+        if(dvIds != null){
+
+            for(Integer dv : dvIds){
+
                 LichHenDichVu item = new LichHenDichVu();
+
                 item.setLichHen(lh);
                 item.setDichVu(dichVuRepo.findById(dv).orElse(null));
+
                 lhDvRepo.save(item);
             }
         }
 
-        session.setAttribute("successMsg", "✔ Đặt lịch thành công!");
-        return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+        session.setAttribute("successMsg","Đặt lịch thành công");
+
+        return "redirect:/user/lichhen";
     }
 
-    // ========================= EDIT FORM =========================
+
+    // ================= FORM SỬA =================
+
     @GetMapping("/edit/{id}")
-    public String editForm(@PathVariable int id, Model model, HttpSession session) {
+    public String editForm(@PathVariable int id, Model model, HttpSession session){
 
         Account acc = (Account) session.getAttribute("user");
-        if (acc == null)
-            return "redirect:/login";
 
-        LichHen lh = lichHenRepo.findById(id).orElse(null);
-        if (lh == null || lh.getKhachHang().getAccount().getId() != acc.getId()) {
-            // nếu không tồn tại hoặc không thuộc KH hiện tại → về Home
-            return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+        if(acc == null){
+            return "redirect:/login";
         }
 
-        List<Integer> selected = lhDvRepo.findByLichHen_MaLh(id)
-                .stream().map(x -> x.getDichVu().getMaDv()).toList();
+        LichHen lh = lichHenRepo.findById(id).orElse(null);
+
+        if(lh == null){
+            return "redirect:/user/lichhen";
+        }
+
+        List<Integer> selected =
+                lhDvRepo.findByLichHen_MaLh(id)
+                        .stream()
+                        .map(x -> x.getDichVu().getMaDv())
+                        .collect(Collectors.toList());
 
         model.addAttribute("lichHen", lh);
         model.addAttribute("listNhanVien", nvRepo.findAll());
         model.addAttribute("listDichVu", dichVuRepo.findAll());
         model.addAttribute("selectedDvIds", selected);
+        model.addAttribute("activePage","appointments");
 
-        return "lichhen-edit";
+        return "user/lichhen-edit";
     }
 
-    // ========================= UPDATE =========================
+
+    // ================= CẬP NHẬT =================
+
     @Transactional
     @PostMapping("/edit")
     public String update(
@@ -237,55 +193,113 @@ public class LichHenUserController {
             @RequestParam LocalDate ngayHen,
             @RequestParam LocalTime gioHen,
             @RequestParam int nhanVien,
-            @RequestParam(name = "dichVuChon", required = false) List<Integer> dvIds,
-            HttpSession session) {
+            @RequestParam(name="dichVuChon",required=false) List<Integer> dvIds,
+            HttpSession session){
 
         Account acc = (Account) session.getAttribute("user");
-        if (acc == null)
+
+        if(acc == null){
             return "redirect:/login";
+        }
 
         LichHen lh = lichHenRepo.findById(maLh).orElse(null);
-        if (lh == null)
-            return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+
+        if(lh == null){
+            return "redirect:/user/lichhen";
+        }
 
         lh.setNgayHen(ngayHen);
         lh.setGioHen(gioHen);
         lh.setNhanVien(nvRepo.findById(nhanVien).orElse(null));
+
         lichHenRepo.save(lh);
 
         lhDvRepo.deleteByLichHen_MaLh(maLh);
 
-        if (dvIds != null) {
-            for (Integer dv : dvIds) {
-                LichHenDichVu ldv = new LichHenDichVu();
-                ldv.setLichHen(lh);
-                ldv.setDichVu(dichVuRepo.findById(dv).orElse(null));
-                lhDvRepo.save(ldv);
+        if(dvIds != null){
+
+            for(Integer dv : dvIds){
+
+                LichHenDichVu item = new LichHenDichVu();
+
+                item.setLichHen(lh);
+                item.setDichVu(dichVuRepo.findById(dv).orElse(null));
+
+                lhDvRepo.save(item);
             }
         }
 
-        session.setAttribute("successMsg", "✔ Cập nhật thành công!");
-        return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+        session.setAttribute("successMsg","Cập nhật lịch hẹn thành công");
+
+        return "redirect:/user/lichhen";
     }
 
-    // ========================= DELETE =========================
+
+    // ================= XÓA =================
+
     @Transactional
     @GetMapping("/delete/{id}")
-    public String delete(@PathVariable int id, HttpSession session) {
+    public String delete(@PathVariable int id, HttpSession session){
 
         Account acc = (Account) session.getAttribute("user");
-        if (acc == null)
+
+        if(acc == null){
             return "redirect:/login";
-
-        LichHen lh = lichHenRepo.findById(id).orElse(null);
-
-        if (lh == null || lh.getKhachHang().getAccount().getId() != acc.getId())
-            return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+        }
 
         lhDvRepo.deleteByLichHen_MaLh(id);
         lichHenRepo.deleteById(id);
 
-        session.setAttribute("successMsg", "✔ Đã xóa lịch hẹn!");
-        return "redirect:/user/home"; // CHỈNH Ở ĐÂY
+        session.setAttribute("successMsg","Đã xóa lịch hẹn");
+
+        return "redirect:/user/lichhen";
     }
+    // ================= API LẤY KHUNG GIỜ =================
+
+@GetMapping("/api/timeslots")
+@ResponseBody
+public List<TimeSlotDTO> getTimeSlots(
+        @RequestParam int manv,
+        @RequestParam LocalDate ngay,
+        @RequestParam(required = false) List<Integer> dvIds) {
+
+    // Lấy tất cả lịch của nhân viên
+    List<LichHen> lichList = lichHenRepo.findByNhanVien_Manv(manv);
+
+    LocalTime start = LocalTime.of(8,0);
+    LocalTime end = LocalTime.of(20,0);
+
+    List<TimeSlotDTO> result = new java.util.ArrayList<>();
+
+    while(start.isBefore(end)){
+
+        boolean busy = false;
+
+        for(LichHen lh : lichList){
+
+            if(!lh.getNgayHen().equals(ngay)) continue;
+
+            // tính tổng thời gian dịch vụ của lịch đó
+            int duration = lhDvRepo.findByLichHen_MaLh(lh.getMaLh())
+                    .stream()
+                    .mapToInt(x -> x.getDichVu().getThoiGianThucHien())
+                    .sum();
+
+            LocalTime existStart = lh.getGioHen();
+            LocalTime existEnd = existStart.plusMinutes(duration);
+
+            // nếu slot nằm trong khoảng lịch đã có
+            if(!start.isBefore(existStart) && start.isBefore(existEnd)){
+                busy = true;
+                break;
+            }
+        }
+
+        result.add(new TimeSlotDTO(start.toString(), busy));
+
+        start = start.plusMinutes(20);
+    }
+
+    return result;
+}
 }
